patternに「>-」が入ってしまっていたルールを修正

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -100,8 +100,7 @@ rules:
         to: すべて
   - expected: そば$1
     pattern:
-      - >-
-        /(?<![々〇〻\u3400-\u9FFF\uF900-\uFAFF]|[\uD840-\uD87F][\uDC00-\uDFFF])側([にへが])/
+      - /(?<![々〇〻\u3400-\u9FFF\uF900-\uFAFF]|[\uD840-\uD87F][\uDC00-\uDFFF])側([にへが])/
     prh: >-
       平仮名にしたほうが読みやすい漢字は平仮名にする
       https://smarthr.design/products/contents/writing-style/
@@ -364,15 +363,13 @@ rules:
         to: 元に戻す
   - expected: $1！
     pattern:
-      - >-
-        /([\u3400-\u4DBF\u4E00-\u9FFF\uF900-\uFAFF]|[\uD840-\uD87F][\uDC00-\uDFFF]|[ぁ-んァ-ヶ])![^!\?]/
+      - /([\u3400-\u4DBF\u4E00-\u9FFF\uF900-\uFAFF]|[\uD840-\uD87F][\uDC00-\uDFFF]|[ぁ-んァ-ヶ])![^!\?]/
     prh: >-
       「！」と「？」は単独で使う場合は全角、ペアで使う場合は半角で表記する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
   - expected: $1？
     pattern:
-      - >-
-        /([\u3400-\u4DBF\u4E00-\u9FFF\uF900-\uFAFF]|[\uD840-\uD87F][\uDC00-\uDFFF]|[ぁ-んァ-ヶ])\?[^!\?]/
+      - /([\u3400-\u4DBF\u4E00-\u9FFF\uF900-\uFAFF]|[\uD840-\uD87F][\uDC00-\uDFFF]|[ぁ-んァ-ヶ])\?[^!\?]/
     prh: >-
       「！」と「？」は単独で使う場合は全角、ペアで使う場合は半角で表記する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
