--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -243,6 +243,15 @@ rules:
     specs:
       - from: zipファイル
         to: ZIPファイル
+  - expected: アクセシビリティ
+    pattern:
+      - アクセシビリティー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: アクセシビリティー
+        to: アクセシビリティ
   - expected: あとで
     pattern:
       - /(?<![始了直])後で/
@@ -278,6 +287,19 @@ rules:
         to: ユーザーさま
       - from: 皆様
         to: 皆さま
+  - expected: ウェブ
+    pattern:
+      - /(Web|web|WEB)(?!ブラウザ)/
+    prh: >-
+      「ウェブ」はカタカナで表記する
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: Web
+        to: ウェブ
+      - from: web
+        to: ウェブ
+      - from: Webブラウザ
+        to: Webブラウザ
   - expected: 振り込み
     pattern:
       - /(?<!給与)振込(?!口座)/
@@ -412,6 +434,15 @@ rules:
     specs:
       - from: カイゼンしました
         to: 改善しました
+  - expected: クエリ
+    pattern:
+      - クエリー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: クエリー
+        to: クエリ
   - expected: ごと$1
     pattern:
       - /毎([にので])/
@@ -425,6 +456,15 @@ rules:
         to: 項目ごとの
       - from: フォーム毎で
         to: フォームごとで
+  - expected: サーバー
+    pattern:
+      - /サーバ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: 受信サーバに拒否されました
+        to: 受信サーバーに拒否されました
   - expected: さら$1
     pattern:
       - /(?<!変)更(に|なる)/
@@ -445,6 +485,30 @@ rules:
     specs:
       - from: 暫く
         to: しばらく
+  - expected: スマートフォン
+    pattern:
+      - スマートホン
+      - スマフォ
+      - スマホ
+    prh: >-
+      「スマートフォン」と表現し、「スマホ」などの表現は控える
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: スマートホン
+        to: スマートフォン
+      - from: スマフォ
+        to: スマートフォン
+      - from: スマホ
+        to: スマートフォン
+  - expected: セキュリティ
+    pattern:
+      - セキュリティー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: セキュリティー
+        to: セキュリティ
   - expected: ぜひ
     pattern:
       - /是非(?!を|に|にも)/
@@ -454,6 +518,24 @@ rules:
     specs:
       - from: 是非
         to: ぜひ
+  - expected: ソフトウェア
+    pattern:
+      - ソフトウエア
+    prh: >-
+      「ウィ/ウェ/ウォ」を使用する
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: ソフトウエア
+        to: ソフトウェア
+  - expected: タイポグラフィ
+    pattern:
+      - タイポグラフィー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: タイポグラフィー
+        to: タイポグラフィ
   - expected: 問い合わせ
     pattern:
       - 問合せ
@@ -472,6 +554,15 @@ rules:
         to: ドラッグアンドドロップ
       - from: ドラッグ・ドロップ
         to: ドラッグアンドドロップ
+  - expected: ナンバー
+    pattern:
+      - /ナンバ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: ナンバ
+        to: ナンバー
   - expected: はじめて
     pattern:
       - 初めて
@@ -522,6 +613,26 @@ rules:
         to: 紐づけて
       - from: 紐付くhoge
         to: 紐づくhoge
+  - expected: フィルター
+    pattern:
+      - /フィルタ(?!(ー|リング))/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: フィルタ
+        to: フィルター
+      - from: フィルタリング
+        to: フィルタリング
+  - expected: フォルダ
+    pattern:
+      - フォルダー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: フォルダー
+        to: フォルダ
   - expected: 2つ
     pattern:
       - 二つ
@@ -534,11 +645,29 @@ rules:
         to: 2つ
       - from: ふたつ
         to: 2つ
+  - expected: フッター
+    pattern:
+      - /フッタ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: フッタ
+        to: フッター
+  - expected: プライバシー
+    pattern:
+      - /プライバシィ?(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: プライバシ
+        to: プライバシー
+      - from: プライバシィ
+        to: プライバシー
   - expected: ブラウザ
     pattern:
-      - ウェブブラウザ
-      - Webブラウザ
-      - webブラウザ
+      - /(ウェブ|Web|web|WEB)ブラウザ/
     prh: >-
       「ウェブ」はカタカナで表記する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
@@ -549,6 +678,56 @@ rules:
         to: ブラウザ
       - from: webブラウザ
         to: ブラウザ
+  - expected: プリンター
+    pattern:
+      - /プリンタ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: プリンタ
+        to: プリンター
+  - expected: ヘッダー
+    pattern:
+      - /ヘッダ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: ヘッダ
+        to: ヘッダー
+  - expected: ポリシー
+    pattern:
+      - /ポリシィ?(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: ポリシィ
+        to: ポリシー
+      - from: ポリシ
+        to: ポリシー
+  - expected: マスターデータ
+    pattern:
+      - /(?<!部署|カスタム|システム標準)マスタ(?!ー)(データ)?/
+    prh: >-
+      マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: マスタ
+        to: マスターデータ
+      - from: マスタデータ
+        to: マスターデータ
+      - from: 部署マスター
+        to: 部署マスター
+  - expected: マネージャー
+    pattern:
+      - /マネージャ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: マネージャ
+        to: マネージャー
   - expected: 見積もり
     pattern:
       - 見積り
@@ -558,6 +737,26 @@ rules:
     specs:
       - from: 見積り
         to: 見積もり
+  - expected: メンバー
+    pattern:
+      - /メンバ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: メンバ
+        to: メンバー
+  - expected: ユーザー
+    pattern:
+      - /ユーザ(?!(ー|ビリティ))/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: ユーザ
+        to: ユーザー
+      - from: ユーザビリティ
+        to: ユーザビリティ
   - expected: よろしく
     pattern:
       - 宜しく
@@ -567,6 +766,17 @@ rules:
     specs:
       - from: 宜しく
         to: よろしく
+  - expected: レイヤー
+    pattern:
+      - /(?<!プ)レイヤ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: レイヤ
+        to: レイヤー
+      - from: Flashプレイヤー
+        to: Flashプレイヤー
   - expected: ⓪
     pattern:
       - /[🄋⓿🄌]/
@@ -660,75 +870,3 @@ rules:
     specs:
       - from: テナント
         to: 企業アカウント
-  - expected: サブドメイン
-    pattern:
-      - テナントID
-    prh: 「テナントID」は社内用語のため、「サブドメイン」に置き換えます。内部的に使用する「tenant_id」はそのまま表記してください。
-    specs:
-      - from: テナントID
-        to: サブドメイン
-  - expected: 在籍状況
-    pattern:
-      - 在職状況
-    prh: >-
-      従業員の休職や退職を表すステータスの総称は「在籍状況」と表現し、勤務中の状態は「在職中」と表現する
-      https://smarthr.design/products/contents/idiomatic-usage/usage/
-    specs:
-      - from: 在職状況
-        to: 在籍状況
-  - expected: 在職中
-    pattern:
-      - 在籍中
-    prh: >-
-      従業員の休職や退職を表すステータスの総称は「在籍状況」と表現し、勤務中の状態は「在職中」と表現する
-      https://smarthr.design/products/contents/idiomatic-usage/usage/
-    specs:
-      - from: 在籍中
-        to: 在職中
-  - expected: 再読み込み
-    pattern:
-      - /再(読込み|読込)|リロード/
-    prh: >-
-      「再読み込み」と表現し、「更新」「リロード」の使用は控える
-      https://smarthr.design/products/contents/idiomatic-usage/usage/
-    specs:
-      - from: 再読込み
-        to: 再読み込み
-      - from: 再読込
-        to: 再読み込み
-      - from: リロード
-        to: 再読み込み
-      - from: 再読み込み
-        to: 再読み込み
-  - expected: システム標準マスター
-    pattern:
-      - /(システム標準マスターデータ|システム標準マスタ(?!ー))/
-    prh: >-
-      マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記する
-      https://smarthr.design/products/contents/idiomatic-usage/usage/
-    specs:
-      - from: システム標準マスタ
-        to: システム標準マスター
-      - from: システム標準マスターデータ
-        to: システム標準マスター
-      - from: システム標準マスター
-        to: システム標準マスター
-  - expected: カスタムマスター
-    pattern:
-      - /(カスタムマスターデータ|カスタムマスタ(?!ー))/
-    prh: >-
-      マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記する
-      https://smarthr.design/products/contents/idiomatic-usage/usage/
-    specs:
-      - from: カスタムマスタ
-        to: カスタムマスター
-      - from: カスタムマスターデータ
-        to: カスタムマスター
-      - from: カスタムマスター
-        to: カスタムマスター
-  - expected: 改$1
-    pattern:
-      - /あらた([めま])/
-    specs:
-      - from: あらためて
-        to: 改めて
