[create-pull-request] automated change

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -243,6 +243,15 @@ rules:
     specs:
       - from: zipファイル
         to: ZIPファイル
+  - expected: アクセシビリティ
+    pattern:
+      - アクセシビリティー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: アクセシビリティー
+        to: アクセシビリティ
   - expected: あとで
     pattern:
       - /(?<![始了直])後で/
@@ -412,6 +421,15 @@ rules:
     specs:
       - from: カイゼンしました
         to: 改善しました
+  - expected: クエリ
+    pattern:
+      - クエリー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: クエリー
+        to: クエリ
   - expected: ごと$1
     pattern:
       - /毎([にので])/
@@ -425,6 +443,15 @@ rules:
         to: 項目ごとの
       - from: フォーム毎で
         to: フォームごとで
+  - expected: サーバー
+    pattern:
+      - /サーバ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: 受信サーバに拒否されました
+        to: 受信サーバーに拒否されました
   - expected: さら$1
     pattern:
       - /(?<!変)更(に|なる)/
@@ -445,6 +472,30 @@ rules:
     specs:
       - from: 暫く
         to: しばらく
+  - expected: スマートフォン
+    pattern:
+      - スマートホン
+      - スマフォ
+      - スマホ
+    prh: >-
+      「スマートフォン」と表現し、「スマホ」などの表現は控える
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: スマートホン
+        to: スマートフォン
+      - from: スマフォ
+        to: スマートフォン
+      - from: スマホ
+        to: スマートフォン
+  - expected: セキュリティ
+    pattern:
+      - セキュリティー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: セキュリティー
+        to: セキュリティ
   - expected: ぜひ
     pattern:
       - /是非(?!を|に|にも)/
@@ -454,6 +505,24 @@ rules:
     specs:
       - from: 是非
         to: ぜひ
+  - expected: ソフトウェア
+    pattern:
+      - ソフトウエア
+    prh: >-
+      「ウィ/ウェ/ウォ」を使用する
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: ソフトウエア
+        to: ソフトウェア
+  - expected: タイポグラフィ
+    pattern:
+      - タイポグラフィー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: タイポグラフィー
+        to: タイポグラフィ
   - expected: 問い合わせ
     pattern:
       - 問合せ
@@ -472,6 +541,15 @@ rules:
         to: ドラッグアンドドロップ
       - from: ドラッグ・ドロップ
         to: ドラッグアンドドロップ
+  - expected: ナンバー
+    pattern:
+      - /ナンバ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: ナンバ
+        to: ナンバー
   - expected: はじめて
     pattern:
       - 初めて
@@ -522,6 +600,26 @@ rules:
         to: 紐づけて
       - from: 紐付くhoge
         to: 紐づくhoge
+  - expected: フィルター
+    pattern:
+      - /フィルタ(?!(ー|リング))/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: フィルタ
+        to: フィルター
+      - from: フィルタリング
+        to: フィルタリング
+  - expected: フォルダ
+    pattern:
+      - フォルダー
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: フォルダー
+        to: フォルダ
   - expected: 2つ
     pattern:
       - 二つ
@@ -534,11 +632,38 @@ rules:
         to: 2つ
       - from: ふたつ
         to: 2つ
+  - expected: フッター
+    pattern:
+      - /フッタ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: フッタ
+        to: フッター
+  - expected: プライバシー
+    pattern:
+      - /プライバシィ?(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: プライバシ
+        to: プライバシー
+      - from: プライバシィ
+        to: プライバシー
   - expected: ブラウザ
     pattern:
-      - ウェブブラウザ
-      - Webブラウザ
-      - webブラウザ
+      - /(?<!ウェブ|Web|web|WEB)ブラウザー/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: ブラウザー
+        to: ブラウザ
+  - expected: ブラウザ
+    pattern:
+      - /(ウェブ|Web|web|WEB)ブラウザ/
     prh: >-
       「ウェブ」はカタカナで表記する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
@@ -549,6 +674,56 @@ rules:
         to: ブラウザ
       - from: webブラウザ
         to: ブラウザ
+  - expected: プリンター
+    pattern:
+      - /プリンタ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: プリンタ
+        to: プリンター
+  - expected: ヘッダー
+    pattern:
+      - /ヘッダ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: ヘッダ
+        to: ヘッダー
+  - expected: ポリシー
+    pattern:
+      - /ポリシィ?(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: ポリシィ
+        to: ポリシー
+      - from: ポリシ
+        to: ポリシー
+  - expected: マスターデータ
+    pattern:
+      - /(?<!部署|カスタム|システム標準)マスタ(?!ー)(データ)?/
+    prh: >-
+      マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: マスタ
+        to: マスターデータ
+      - from: マスタデータ
+        to: マスターデータ
+      - from: 部署マスター
+        to: 部署マスター
+  - expected: マネージャー
+    pattern:
+      - /マネージャ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: マネージャ
+        to: マネージャー
   - expected: 見積もり
     pattern:
       - 見積り
@@ -558,6 +733,26 @@ rules:
     specs:
       - from: 見積り
         to: 見積もり
+  - expected: メンバー
+    pattern:
+      - /メンバ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: メンバ
+        to: メンバー
+  - expected: ユーザー
+    pattern:
+      - /ユーザ(?!(ー|ビリティ))/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: ユーザ
+        to: ユーザー
+      - from: ユーザビリティ
+        to: ユーザビリティ
   - expected: よろしく
     pattern:
       - 宜しく
@@ -567,6 +762,17 @@ rules:
     specs:
       - from: 宜しく
         to: よろしく
+  - expected: レイヤー
+    pattern:
+      - /(?<!プ)レイヤ(?!ー)/
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: レイヤ
+        to: レイヤー
+      - from: Flashプレイヤー
+        to: Flashプレイヤー
   - expected: ⓪
     pattern:
       - /[🄋⓿🄌]/
@@ -732,3 +938,25 @@ rules:
     specs:
       - from: あらためて
         to: 改めて
+  - expected: ユーザビリティ
+    pattern:
+      - ユーザビリティー
+      - ユーザービリティ
+    prh: >-
+      ‐er、‐or、‐arで終わる単語は「長音あり」、-yで終わる単語は「長音なし」とする（例外あり）
+      https://smarthr.design/products/writing/idiomatic-usage/usage/
+    specs:
+      - from: ユーザービリティ
+        to: ユーザビリティ
+      - from: ユーザビリティー
+        to: ユーザビリティ
+  - expected: マスターデータ
+    pattern:
+      - /(?<!部署|カスタム|システム標準)マスター(?!データ)/
+    prh: >-
+      マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
+    specs:
+      - from: マスター
+        to: マスターデータ
+      - from: 部署マスター
+        to: 部署マスター
