テストのエラーを修正

--- a/test/.textlintrc
+++ b/test/.textlintrc
@@ -2,8 +2,7 @@
   "rules": {
     "prh": {
       "rulePaths": [
-        "../dict/prh-idiomatic-usage.yml",
-        "../dict/prh-tech-word.yml"
+        "../dict/prh-idiomatic-usage.yml"
       ]
     }
   }
