--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -705,7 +705,7 @@ rules:
         to: ポリシー
   - expected: マスターデータ
     pattern:
-      - /(?<!部署|カスタム|システム標準)マスタ(?!ー)(データ)?/
+      - /(?<!部署|カスタム|システム標準|SmartHR|ドメイン)マスタ(?!ー)(データ)?/
     prh: >-
       マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
     specs:
@@ -952,7 +952,7 @@ rules:
         to: ユーザビリティ
   - expected: マスターデータ
     pattern:
-      - /(?<!部署|カスタム|システム標準)マスター(?!データ)/
+      - /(?<!部署|カスタム|システム標準|SmartHR|ドメイン)マスター(?!データ)/
     prh: >-
       マスターデータの総称は「マスターデータ」、総称以外は「◯◯マスター」と表記するhttps://smarthr.design/products/contents/idiomatic-usage/usage/
     specs:
