--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -533,6 +533,15 @@ rules:
     specs:
       - from: タイポグラフィー
         to: タイポグラフィ
+  - expected: TB
+    pattern:
+      - テラバイト
+    prh: >-
+      ファイルサイズは基本的に英字2文字で表記する
+      https://smarthr.design/products/contents/idiomatic-usage/usage/#recmk5vIbS65cWjA6-0
+    specs:
+      - from: 1テラバイト
+        to: 1TB
   - expected: 問い合わせ
     pattern:
       - 問合せ
@@ -542,6 +551,17 @@ rules:
     specs:
       - from: 問合せ
         to: 問い合わせ
+  - expected: ともに
+    pattern:
+      - /(?<!公)共に/
+    prh: >-
+      平仮名にしたほうが読みやすい漢字は平仮名にする
+      https://smarthr.design/products/contents/writing-style/#recWCPX1UhchVaFjO-0
+    specs:
+      - from: 共にする
+        to: ともにする
+      - from: 公共のために
+        to: 公共のために
   - expected: ドラッグアンドドロップ
     pattern:
       - ドラッグ＆ドロップ
@@ -918,15 +938,12 @@ rules:
         to: 再読み込み
       - from: 再読み込み
         to: 再読み込み
-  - expected: ウィンドウ
+  - expected: 主に
     pattern:
-      - ウインドウ
-    prh: >-
-      「ウィ/ウェ/ウォ」を使用する
-      https://smarthr.design/products/contents/idiomatic-usage/usage/
+      - おもに
     specs:
-      - from: ウインドウ
-        to: ウィンドウ
+      - from: おもに労務担当者が使用します
+        to: 主に労務担当者が使用します
   - expected: システム標準マスター
     pattern:
       - /(システム標準マスターデータ|システム標準マスタ(?!ー))/
@@ -953,6 +970,19 @@ rules:
         to: カスタムマスター
       - from: カスタムマスター
         to: カスタムマスター
+  - expected: 画面
+    pattern:
+      - /モーダルウィンドウ|モーダルダイアログ|ウィンドウ|ダイアログ|モーダル/
+    prh: >-
+      アプリケーションの操作画面は「画面」で表記する
+      https://smarthr.design/products/contents/idiomatic-usage/usage/#recuyZUYZxqRrVbeB-0
+    specs:
+      - from: 別ウィンドウで開く
+        to: 別画面で開く
+      - from: 削除ダイアログ
+        to: 削除画面
+      - from: モーダルを閉じる
+        to: 画面を閉じる
   - expected: 改$1
     pattern:
       - /あらた([めま])/
