--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -372,6 +372,15 @@ rules:
     specs:
       - from: 並び替え
         to: 並べ替え
+  - expected: をもとに
+    pattern:
+      - を基に
+    prh: >-
+      拠り所や根拠を示す「もと」は平仮名で表記する
+      https://smarthr.design/products/contents/idiomatic-usage/usage/#recwriblj4bLsRwiR-0
+    specs:
+      - from: 〜を基に入力する
+        to: 〜をもとに入力する
   - expected: 元$1戻
     pattern:
       - /もと([にへ])戻/
@@ -765,6 +774,15 @@ rules:
     specs:
       - from: 見積り
         to: 見積もり
+  - expected: MB
+    pattern:
+      - メガバイト
+    prh: >-
+      ファイルサイズは基本的に英字2文字で表記する
+      https://smarthr.design/products/contents/idiomatic-usage/usage/#recmk5vIbS65cWjA6-0
+    specs:
+      - from: 1メガバイト
+        to: 1MB
   - expected: メンバー
     pattern:
       - /メンバ(?!ー)/
@@ -938,6 +956,12 @@ rules:
         to: 再読み込み
       - from: 再読み込み
         to: 再読み込み
+  - expected: 主な
+    pattern:
+      - おもな
+    specs:
+      - from: おもな作業はhogeです
+        to: 主な作業はhogeです
   - expected: 主に
     pattern:
       - おもに
@@ -970,6 +994,16 @@ rules:
         to: カスタムマスター
       - from: カスタムマスター
         to: カスタムマスター
+  - expected: パソコン
+    pattern:
+      - PC
+      - パーソナルコンピューター
+    prh: >-
+      「パソコン」と表記し、「PC」の使用は控える
+      https://smarthr.design/products/contents/idiomatic-usage/usage/#recw4wmIL3QqcKmoc-0
+    specs:
+      - from: PCを使用します
+        to: パソコンを使用します
   - expected: 画面
     pattern:
       - /モーダルウィンドウ|モーダルダイアログ|ウィンドウ|ダイアログ|モーダル/
