--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1021,6 +1021,8 @@ rules:
       アプリケーションの呼び方には「SmartHR基本機能」と「オプション機能」を使用する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
     specs:
+      - from: SmartHR本体アプリの権限ごとに設定します
+        to: SmartHR基本機能の権限ごとに設定します
       - from: SmartHR本体の権限ごとに設定します
         to: SmartHR基本機能の権限ごとに設定します
       - from: 本体アプリの権限ごとに設定します
