--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -1023,10 +1023,10 @@ rules:
     specs:
       - from: SmartHR本体アプリの権限ごとに設定します
         to: SmartHR基本機能の権限ごとに設定します
+      - from: 本体アプリの権限ごとに設定します
+        to: SmartHR基本機能の権限ごとに設定します
       - from: SmartHR本体の権限ごとに設定します
         to: SmartHR基本機能の権限ごとに設定します
-      - from: 本体アプリの権限ごとに設定します
-        to: 基本機能の権限ごとに設定します
   - expected: オプション機能
     pattern:
       - プラスアプリ
