fix: 「ブックマーク」の誤検知を修正

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -246,7 +246,7 @@ rules:
   - expected: アイコン
     pattern:
       - >-
-        /(?<!ウォーター|ベル|チェック|サービス|ランド|ロゴ|合意済み|合意済|破棄済み|破棄済|合意|合意前|「合意済み」|「破棄済み」|見本|アット)マーク(?![ァ-ヶ])(?=.*)/
+        /(?<!ウォーター|ベル|チェック|サービス|ランド|ロゴ|合意済み|合意済|破棄済み|破棄済|合意|合意前|「合意済み」|「破棄済み」|見本|アット|ブック)マーク(?![ァ-ヶ])(?=.*)/
     prh: >-
       「マーク」ではなく「アイコン」と表記する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
