--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -633,7 +633,7 @@ rules:
         to: 1つ
   - expected: 1人
     pattern:
-      - /一人|ひとり/
+      - /(?<!一人)(一人|ひとり)(?!ひとり|称)/
     prh: >-
       数字は半角の算用数字で表記する
       https://smarthr.design/products/contents/idiomatic-usage/usage/
